--- a/src/demo-app/radio/radio-demo.scss
+++ b/src/demo-app/radio/radio-demo.scss
@@ -7,4 +7,8 @@
   background-color: #f7f7f7;
   margin: 8px;
   padding: 16px;
+
+  md-radio-button {
+    margin: 8px;
+  }
 }
